                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2019-09-26
 * Remove unneeded param from .call in wing.vue.js

2019-09-23
 * UTF-8 encode messages to Firebase, too.

2019-09-04
 * Use Text::Demoroniser to clean messages being sent to Firebase

2019-08-19
 * Added wing trends --recalc_one

2019-08-16
 * Fix "read more" link in comments.

2019-07-10
 * Add file-locked trends script to prevent more than 1 copy from running at a time.

2019-07-09
 * Fixed the formatting of a "you need to log in" message.

2019-06-04
 * Added comments as a directive to wing.vue.js to be used in conjunction with Wing::Role::Result::Comment.

2019-06-03
 * Upgrade to Facebook::OpenGraph
 * Requires Net::Amazon::S3 0.86 or higher.

2019-05-10
 * Wing notifications (wing.info, wing.success, etc) have been upgraded to use Bootstrap Toasts. See WingVue.pod for usage notes.
 * You must upgrade to bootstrap-vue@2.0.0-rc.19 and bootstrap@4.3.1.
 * You can remove noty from wing_ui_css_requirements.tt and wing_ui_js_requirements.tt.

2019-05-08
 * Fixed bug with nulls in wing.vue.js.

2019-05-07
 * wing.vue.js post can properly handle a JSON blob on post.

2019-05-02
 * Pass thru unlogged methods to CHI.

2019-04-28
 * Use per-process cache object.

2019-04-27
 * Added cachelog subsystem. To use add "cachelog" : "log" to your config, or see Wing::Role::Result::CacheLog for a database log.
 * Added "flush" to wing command cache. Only works with FastMmap and MemcachedFast.

2019-04-26
 * Added a session id conflict check for better security auditing.

2019-04-15
 * Do not die in sending email jobs.  Just delete the job.

2019-04-09
 * Add additional debug for email problems.
 * Remove real_name/display_name from mkits due to unsafe characters.

2019-03-06