@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2019-09-26
  * Remove unneeded param from .call in wing.vue.js
+ * Added Wing->stash which allows variables that last only 1 request.
 
 2019-09-23
  * UTF-8 encode messages to Firebase, too.
